Terminado el swagger  y actualizado algún detalle en el controlador de las comunicaciones.
